test/libhyperion/syntaxTests/denominations/invalid_denomination_no_whitespace.hyp
contract C {
	uint constant y = 1planck;
}
// ----
// ParserError 8936: (32-33): Identifier-start is not allowed at end of a number.
